Set default value for BaseBranch.

--- a/.azure-pipelines/generation-templates/generate-service-modules.yml
+++ b/.azure-pipelines/generation-templates/generate-service-modules.yml
@@ -33,6 +33,7 @@ parameters:
     default: "DocsGeneration"
   - name: BaseBranch
     type: string
+    default: "dev"
 
 jobs:
   - job: GenerateServiceModules
