Set default value for BaseBranch for help docs.

--- a/.azure-pipelines/generation-templates/generate-helpdocs-template.yml
+++ b/.azure-pipelines/generation-templates/generate-helpdocs-template.yml
@@ -4,6 +4,7 @@
 parameters:
   - name: BaseBranch
     type: string
+    default: "dev"
   - name: DOCSBRANCH
     type: string
     default: "DocsGeneration"
