Weekly OpenApiDocs Download.

--- a/openApiDocs/beta/Teams.yml
+++ b/openApiDocs/beta/Teams.yml
@@ -18378,148 +18378,6 @@ paths:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
   /teams:
-    get:
-      tags:
-        - teams.team
-      summary: List teams
-      description: List all teams in an organization.
-      externalDocs:
-        description: Find more info here
-        url: https://docs.microsoft.com/graph/api/teams-list?view=graph-rest-1.0
-      operationId: teams.team_ListTeam
-      parameters:
-        - $ref: '#/components/parameters/top'
-        - $ref: '#/components/parameters/skip'
-        - $ref: '#/components/parameters/search'
-        - $ref: '#/components/parameters/filter'
-        - $ref: '#/components/parameters/count'
-        - name: $orderby
-          in: query
-          description: Order items by property values
-          style: form
-          explode: false
-          schema:
-            uniqueItems: true
-            type: array
-            items:
-              enum:
-                - id
-                - id desc
-                - classification
-                - classification desc
-                - createdDateTime
-                - createdDateTime desc
-                - description
-                - description desc
-                - discoverySettings
-                - discoverySettings desc
-                - displayName
-                - displayName desc
-                - funSettings
-                - funSettings desc
-                - guestSettings
-                - guestSettings desc
-                - internalId
-                - internalId desc
-                - isArchived
-                - isArchived desc
-                - isMembershipLimitedToOwners
-                - isMembershipLimitedToOwners desc
-                - memberSettings
-                - memberSettings desc
-                - messagingSettings
-                - messagingSettings desc
-                - specialization
-                - specialization desc
-                - summary
-                - summary desc
-                - tenantId
-                - tenantId desc
-                - visibility
-                - visibility desc
-                - webUrl
-                - webUrl desc
-              type: string
-        - name: $select
-          in: query
-          description: Select properties to be returned
-          style: form
-          explode: false
-          schema:
-            uniqueItems: true
-            type: array
-            items:
-              enum:
-                - id
-                - classification
-                - createdDateTime
-                - description
-                - discoverySettings
-                - displayName
-                - funSettings
-                - guestSettings
-                - internalId
-                - isArchived
-                - isMembershipLimitedToOwners
-                - memberSettings
-                - messagingSettings
-                - specialization
-                - summary
-                - tenantId
-                - visibility
-                - webUrl
-                - allChannels
-                - channels
-                - group
-                - incomingChannels
-                - installedApps
-                - members
-                - operations
-                - owners
-                - permissionGrants
-                - photo
-                - primaryChannel
-                - tags
-                - template
-                - templateDefinition
-                - schedule
-              type: string
-        - name: $expand
-          in: query
-          description: Expand related entities
-          style: form
-          explode: false
-          schema:
-            uniqueItems: true
-            type: array
-            items:
-              enum:
-                - '*'
-                - allChannels
-                - channels
-                - group
-                - incomingChannels
-                - installedApps
-                - members
-                - operations
-                - owners
-                - permissionGrants
-                - photo
-                - primaryChannel
-                - tags
-                - template
-                - templateDefinition
-                - schedule
-              type: string
-      responses:
-        2XX:
-          $ref: '#/components/responses/microsoft.graph.teamCollectionResponse'
-        default:
-          $ref: '#/components/responses/error'
-      x-ms-pageable:
-        nextLinkName: '@odata.nextLink'
-        operationName: listMore
-      x-ms-docs-operation-type: operation
     post:
       tags:
         - teams.team
@@ -18550,8 +18408,7 @@ paths:
     get:
       tags:
         - teams.team
-      summary: Get team
-      description: Retrieve the properties and relationships of the specified team.
+      summary: Get entity from teams by key
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/team-get?view=graph-rest-1.0
@@ -70938,19 +70795,6 @@ components:
           nullable: true
       additionalProperties:
         type: object
-    microsoft.graph.teamCollectionResponse:
-      title: Collection of team
-      type: object
-      properties:
-        value:
-          type: array
-          items:
-            $ref: '#/components/schemas/microsoft.graph.team'
-        '@odata.nextLink':
-          type: string
-          nullable: true
-      additionalProperties:
-        type: object
     microsoft.graph.deletedTeamCollectionResponse:
       title: Collection of deletedTeam
       type: object
@@ -71024,6 +70868,19 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.workforceIntegration'
+        '@odata.nextLink':
+          type: string
+          nullable: true
+      additionalProperties:
+        type: object
+    microsoft.graph.teamCollectionResponse:
+      title: Collection of team
+      type: object
+      properties:
+        value:
+          type: array
+          items:
+            $ref: '#/components/schemas/microsoft.graph.team'
         '@odata.nextLink':
           type: string
           nullable: true
@@ -87242,12 +87099,6 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/microsoft.graph.teamworkTagMemberCollectionResponse'
-    microsoft.graph.teamCollectionResponse:
-      description: Retrieved collection
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/microsoft.graph.teamCollectionResponse'
     microsoft.graph.deletedTeamCollectionResponse:
       description: Retrieved collection
       content:
@@ -87284,6 +87135,12 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/microsoft.graph.workforceIntegrationCollectionResponse'
+    microsoft.graph.teamCollectionResponse:
+      description: Retrieved collection
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/microsoft.graph.teamCollectionResponse'
     microsoft.graph.associatedTeamInfoCollectionResponse:
       description: Retrieved collection
       content:
