--- a/.azure-pipelines/common-templates/security-prechecks-template.yml
+++ b/.azure-pipelines/common-templates/security-prechecks-template.yml
@@ -1,13 +1,12 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License.
 steps:
-- task: CredScan@3
-  displayName: 'Run CredScan'
+- task: securedevelopmentteam.vss-secure-development-tools.build-task-credscan.CredScan@3
+  displayName: 'Run CredScan - Src'
   inputs:
     debugMode: false
-    batchSize: 20
+    scanFolder: '$(Build.SourcesDirectory)\src'
     toolMajorVersion: 'V2'
-    searchersFileType: 'Skype'
 
 - task: PoliCheck@2
   displayName: 'Run PoliCheck'
