--- a/.azure-pipelines/generate-auth-module-template.yml
+++ b/.azure-pipelines/generate-auth-module-template.yml
@@ -52,7 +52,7 @@ jobs:
     inputs:
         userProvideBuildInfo: 'msBuildInfo'
         msBuildVersion: '16.0'
-        msBuildArchitecture: 'DotNetCore'
+        msBuildArchitecture: 'x64'
         msBuildCommandline: '"C:\Program Files\dotnet\dotnet.exe" msbuild $(System.DefaultWorkingDirectory)//src//Authentication//Authentication.sln /nologo /nr:false'
 
   - task: PowerShell@2
